2002-09-18  Rob Browning <rlb@defaultvalue.org>

	* gnus-art.el (gnus-article-x-face-command): Don't use
	gnus-article-compface-xbm.

2002-09-06  Juanma Barranquero  <lektu@terra.es>

	* gnus-int.el (gnus-status-message): Fix spacing.

2002-08-30  Juanma Barranquero  <lektu@terra.es>

	* imap.el (imap-authenticator-alist, imap-stream-alist)
	(imap-continuation): Fix typos.

2002-08-23  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnfolder.el (nnfolder-request-expire-articles): expiry-target.

	* nnbabyl.el (nnbabyl-request-expire-articles): Ditto.

	* nnmbox.el (nnmbox-request-expire-articles): Ditto.

	* nnmh.el (nnmh-request-expire-articles): Implemented
	expiry-target for nnmh backend.

2002-08-20  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-button-url-regexp): Use POSIX regexp if possible.

	* nnmh.el (nnmh-request-list-1): Use %.0f instead of %d to
	avoid arithmetic errors.

2002-07-06  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-topic.el (gnus-topic-indent, gnus-topic-unindent): Change
	cdaar to cdar and car.

	* nnsoup.el (nnsoup-retrieve-headers, nnsoup-request-type)
	(nnsoup-read-active-file, nnsoup-article-to-area): Ditto.

2002-07-03  Juanma Barranquero  <lektu@terra.es>

	* gnus-sum.el (gnus-summary-highlight): Fix typo.

2002-06-21  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnheader.el (nnheader-file-name-translation-alist): Set the
	default value for MS Windows systems.

	* gnus-ems.el (nnheader-file-name-translation-alist): Removed.

	* nndoc.el (nndoc-mime-digest-type-p): Set proper file-end.
	* nndoc.el: Add several new types.

2002-05-16  Juanma Barranquero  <lektu@terra.es>

	* gnus-art.el (gnus-mime-copy-part): Fix typo.

2002-05-09  Miles Bader  <miles@gnu.org>

	* gnus-cite.el (gnus-cite-blank-line-after-header): New variable.
	(gnus-article-hide-citation): Respect it.

2002-04-12  Juanma Barranquero  <lektu@terra.es>

	* pop3.el (pop3-open-server): Fix typo.

2002-04-12  ShengHuo ZHU  <zsh@cs.rochester.edu>
